apps-proof/umami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: umami
  labels:
    or2.stumason.dev/app: "true"
