apps-proof/umami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami
  namespace: umami
spec:
  ingressClassName: traefik
  rules:
    - host: "umami${HOST_SUFFIX}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami
                port:
                  name: http
